# filesystem-check

./: .pre-commit-config.yaml  README.md  pyproject.toml
filesystem_check/: __init__.py  aas_checks.py  base.py  list_directory.py
tests/: aas_checks_test.py  check_path_test.py  filesystem_check_test.py  list_directory_test.py
