[tool.poetry]
name = "filesystem-check"
version = "0.1.0"
description = ""
authors = ["Dominik Drexl <domdrexl@gmail.com>"]
license = "MIT"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pre-commit = "^1.17"
codecov = "^2.0"
pytest = "^4.2"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
